<resources>
    <string name="app_name">Tom&amp;Jerry</string>
    <string name="tj">TOM $ JERRY </string>
    <string name="reset">RESET</string>
    <string name="welcome">Welcome</string>
    <string name="start">START</string>
    <string name="todo">TODO</string>
    <string name="to_the_world_of_keats_salazar">To THE WORLD OF KEATS SALAZAR!</string>
    <string name="jw">JERRY WON</string>
    <string name="tw">TOM WON</string>
</resources>
