<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/shape">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="317dp"
        android:layout_height="376dp"
        android:layout_marginTop="16dp"
        android:background="#121311"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.474"
        app:rowCount="3">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="95dp"
            android:layout_height="115dp"
            android:layout_margin="5dp"
            android:alpha="0.4"
            android:background="#5E1ECF"
            android:contentDescription="@string/todo"
            android:gravity="center"
            android:onClick="imagetapped"
            android:padding="4dp"
            android:tag="0" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="95dp"
            android:layout_height="115dp"
            android:layout_margin="5dp"
            android:alpha="0.4"
            android:background="#5E1ECF"
            android:contentDescription="@string/todo"
            android:gravity="center"
            android:onClick="imagetapped"
            android:padding="4dp"
            android:tag="1" />

        <ImageView
            android:id="@+id/img3"
            android:layout_width="95dp"
            android:layout_height="115dp"
            android:layout_margin="5dp"
            android:alpha="0.4"
            android:background="#5E1ECF"
            android:contentDescription="@string/todo"
            android:gravity="center"
            android:onClick="imagetapped"
            android:padding="4dp"
            android:tag="2" />

        <ImageView
            android:id="@+id/img4"
            android:layout_width="95dp"
            android:layout_height="115dp"
            android:layout_margin="5dp"
            android:alpha="0.4"
            android:background="#5E1ECF"
            android:contentDescription="@string/todo"
            android:gravity="center"
            android:onClick="imagetapped"
            android:padding="4dp"
            android:tag="3" />

        <ImageView
            android:id="@+id/img5"
            android:layout_width="95dp"
            android:layout_height="115dp"
            android:layout_margin="5dp"
            android:alpha="0.4"
            android:background="#5E1ECF"
            android:contentDescription="@string/todo"
            android:gravity="center"
            android:onClick="imagetapped"
            android:padding="4dp"
            android:tag="4" />

        <ImageView
            android:id="@+id/img6"
            android:layout_width="95dp"
            android:layout_height="115dp"
            android:layout_margin="5dp"
            android:alpha="0.4"
            android:background="#5E1ECF"
            android:contentDescription="@string/todo"
            android:gravity="center"
            android:onClick="imagetapped"
            android:padding="4dp"
            android:tag="5" />

        <ImageView
            android:id="@+id/img7"
            android:layout_width="95dp"
            android:layout_height="115dp"
            android:layout_margin="5dp"
            android:alpha="0.4"
            android:background="#5E1ECF"
            android:contentDescription="@string/todo"
            android:gravity="center"
            android:onClick="imagetapped"
            android:padding="4dp"
            android:tag="6" />

        <ImageView
            android:id="@+id/img8"
            android:layout_width="95dp"
            android:layout_height="115dp"
            android:layout_margin="5dp"
            android:alpha="0.4"
            android:background="#5E1ECF"
            android:contentDescription="@string/todo"
            android:gravity="center"
            android:onClick="imagetapped"
            android:padding="4dp"
            android:tag="7" />

        <ImageView
            android:id="@+id/img9"
            android:layout_width="95dp"
            android:layout_height="115dp"
            android:layout_margin="5dp"
            android:alpha="0.4"
            android:background="#5E1ECF"
            android:contentDescription="@string/todo"
            android:onClick="imagetapped"
            android:padding="4dp"
            android:tag="8"
            app:layout_gravity="center" />
    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/txt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/gradeint"
        android:gravity="center"
        android:text="@string/tj"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/gradeint"
        android:text="@string/reset"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:elevation="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <TextView
        android:id="@+id/res"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:background="@drawable/gradeint"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:elevation="60dp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt"
        app:layout_constraintVertical_bias="0.75" />
</androidx.constraintlayout.widget.ConstraintLayout>